--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@dzangolab/vue-attributes",
   "version": "0.1.0",
   "description": "Attributes components for vue .js (vue3)",
-  "keywords": ["vuejs", "attributes"],
+  "keywords": [
+    "vuejs",
+    "attributes"
+  ],
   "homepage": "https://github.com/dzangolab/vue-attributes",
   "bugs": "https://github.com/dzangolab/vue-attributes/issues",
   "repository": {
@@ -16,7 +19,14 @@
     "url": "https://www.dzangolab.com"
   },
   "main": "./dist/attributes.common.js",
-  "files": ["*.js", "*.json", "*.ts", "dist/*", "lib/*", "public/*"],
+  "files": [
+    "*.js",
+    "*.json",
+    "*.ts",
+    "dist/*",
+    "lib/*",
+    "public/*"
+  ],
   "scripts": {
     "build": "vue-cli-service build --target lib --name attributes ./lib/index.js",
     "commitlint": "commitlint --edit $1",
@@ -24,7 +34,6 @@
     "package-sort": "npx sort-package-json",
     "prepare": "husky install",
     "prepublishOnly": "yarn run sort-package && yarn run lint && yarn run test && yarn run build",
-    "prerelease": "yarn run test",
     "serve": "vue-cli-service serve",
     "test": "yarn run test:unit",
     "test:unit": "vue-cli-service test:unit",
@@ -57,5 +66,8 @@
   },
   "peerDependencies": {
     "vue": ">= 3.0"
+  },
+  "engines": {
+    "node": ">= 14"
   }
 }
